# rsradia

./: .gitignore  README.md  setup.py
docs/: index.rst
examples/: ipyparallel_radia_tests.ipynb  parallel_radia_solve.ipynb  radia_test_function.py
examples/demos/: degaussing_demo.ipynb  hysteresis_demo.ipynb  ja-model_g20-steel  pr-model_g20-steel  pr-model_g20-steel_density.npy  pr-model_g20-steel_grid-100.npy
examples/dipole_shim_optimization/: adding_shims_low-ar.ipynb  dipole.py  optimize_shim.yml  simulation.py
examples/parameterized_dipole/: dipole.ipynb  dipole_advanced.ipynb  dipole_geometry.ipynb
examples/stl_import/: load_cut_block.ipynb  radia_load_concave.py  shapr3d_export_2021-09-08_13h01m.stl
rshyst/: README.md  pyproject.toml
rshyst/examples/Degaussing/: degaussing.ipynb  electromagnet.py
rshyst/examples/Jiles-Atherton/: jiles_atherton.ipynb
rshyst/examples/Preisach/: preisach.ipynb
rshyst/rshyst/: __init__.py  constants.py  distributions.py  integrators.py  jilesatherton.py  model.py  preisach.py
rsradia/: __init__.py  generator.py  jupyter.py  plots.py  rsradia_console.py
rsradia/hysteresis/: __init__.py  density_functions.py  distributions.py  fit_preisach.ipynb  hysteresis.ipynb  hysteresis_model.py  hysteresis_models.py  integrators.py  jiles_atherton.py  preisach.py
rsradia/magnets/: H_dipole.py  __init__.py  base.py  block.py  cdipole.py  dipole.py  geometry.py  multipole.py  rsradia_materials.txt  simple_dipole.py
rsradia/package_data/: run_parallel_radia.py.jinja
tests/: import_test.py  integrator_tests.py
(+8 files in other folders)
